<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_cover"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/fumo"
            android:contentDescription="@string/default_image" />

        <TextView
            android:id="@+id/tv_item_title"
            style="@style/TextSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_item_cover"
            app:layout_constraintTop_toTopOf="@id/img_item_cover"
            tools:text="@string/anime_titles" />

        <TextView
            android:id="@+id/tv_item_synopsis"
            style="@style/TextSynopsis"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="@id/img_item_cover"
            app:layout_constraintEnd_toEndOf="@id/tv_item_title"
            app:layout_constraintStart_toStartOf="@id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@id/tv_item_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>